Changes for 1.1.3:

 - fixed system.swap.in[] and system.swap.out[] under Linux 2.4 (Alexei)
 - fixed occasional LIBSQLORA8-30002: Memory allocation error. (Alexei)
 - added support of macro {EVENT.ID} (Alexei)
 - support of environment variables for aleert scripts:
   ZABBIX_ALERT_ID,ZABBIX_ACTION_ID,ZABBIX_ALERT_TIME,ZABBIX_ALERT_MEDIATYPEID,
   ZABBIX_ALERT_STATUS,ZABBIX_ALERT_RETRIES,ZABBIX_ALERT_DELAY (Alexei)
 - added support of macro {TRIGGER.ID} (Alexei)
 - fixed calculation of nodata() (Alexei)
 - do not refresh view of log files (Alexei)
 - better processing of units 's', support for units 'uptime' (Alexei)
 - fixed data.sql to set correct item type UIN64 where required (Alexei)
 - fixed data.sql to get rid of zero multipliers (Alexei)
 - fixed problem when adding a graph under PostgreSQL (Alexei)
 - new algorithm for housekeeping same for all DB engines (Alexei)
 - fixed calculation of delta(#N) (Alexei)
 - always draw graphs for items having type "trapper" (Alexei)
 - added Swedish translation. Thanks to "yeager". (Alexei)
 - support of system.swap.size[,pfree] and system.swap.size[,pused] (Alexei)
 - better calculation of next check timestamp for active items (Alexei)
 - fixed situations when latest_alarm() may return wrong value (Alexei)
 - remove left spaces from script full path (Alexei)
 - fixed Most Busy trigger report for multi-item triggers (Alexei)
 - fixed possible security issues raised by debian security audit (Alexei)
 - changed all zabbix_log(lev, str) to zabbix_log(lev,"%s", str) (Alexei)
 - introduced secure strcat and strcpy: zbx_strlcat, zbx_strlcpy (Alexei)
 - better format for Queue report (Alexei) 
 - fixed perofmance problem in Status of Triggers (Alexei)
 - history stats removed from Status of ZABBIX report (Alexei)
 - fixed assignment of default listen port for Win agent (Eugene)
 - changed return value for 'net.tcp.port[]' of Win agent (Eugene)
 - added images for postgres (Eugene)
 - fixed reversed icons on maps (Eugene)