@@ -1,5 +1,6 @@
 Changes for 1.1.3:
 
+ - fixed processing of SNMP HEX and OCTET string values (Alexei)
  - fixed system.swap.in[] and system.swap.out[] under Linux 2.4 (Alexei)
  - fixed occasional LIBSQLORA8-30002: Memory allocation error. (Alexei)
  - added support of macro {EVENT.ID} (Alexei)
